# library-management-system

./: .gitignore  .replit  README.md  app.py  auth.py  extensions.py  forms.py  github_sync.py  migrations.py  models.py  pyproject.toml  utils.py
attached_assets/: Pasted-AttributeError-AttributeError-type-object-User-has-no-attribute-get-all-Traceback-most-recent-1735119820681.txt  Pasted-AttributeError-AttributeError-type-object-datetime-datetime-has-no-attribute-strptimestrptime--1735226235818.txt  Pasted-NameError-NameError-name-validate-reservation-is-not-defined-Traceback-most-recent-call-last-F-1735120779415.txt  Pasted-TemplateNotFound-jinja2-exceptions-TemplateNotFound-reports-transactions-html-Traceback-most-rece-1735190794744.txt  Pasted-UnboundLocalError-UnboundLocalError-cannot-access-local-variable-report-data-where-it-is-not-asso-1735191141829.txt  Pasted-UnboundLocalError-UnboundLocalError-cannot-access-local-variable-return-date-where-it-is-not-asso-1735190479066.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-datetime-is-undefined-Traceback-most-recent-cal-1735179720448.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-datetime-is-undefined-Traceback-most-recent-cal-1735190850249.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-form-is-undefined-Traceback-most-recent-call-la-1735227230568.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-now-is-undefined-Traceback-most-recent-call-las-1735190980674.txt  (+2 more)
data/: books.json  members.json  reservations.json  transactions.json  users.json
routes/: auth.py  main.py
(+18 files in other folders)
