[project]
name = "repl-nix-librarymanager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.2.0",
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.2.5",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "pygithub>=2.5.0",
]
